sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:86: error: not found: value posEchange
    deplace(currBase, posEchange);
                      ^SelectBaseball:93: error: not found: value posEchange
  deplace(currBase, posEchange);
                    ^SelectBaseball:99: error: not found: value posEchange
  deplace(currBase, posEchange)
                    ^SelectBaseball:109: error: not found: value posEchange
    deplace(currBase, posEchange);
                      ^